test/noImplicitForget.slq

def main(x:ğ”¹){
	y := dup(x); // error
	if y { x := H(x); }
	return x;
}
